--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/github_pages.css">
 	</head>
 	<body>
 		<header>
@@ -32,11 +32,11 @@
 					<div class="well repository">
 						<p><em>Un assistant là pour vous aider à effacer le malaise de la page blanche lors de la composition d'une oeuvre littéraire!</em></p>
 						<h2>Assistant de création de romans (Ver 0.1.0)</h2>
-						<h3>Qu'est-ce que c'est?</h3>
+						<h3>Qu'est-ce que c'est ?</h3>
 						<p>Un assistant là pour vous aider à effacer le malaise de la page blanche! Il est à même de suggèrer une structure narrative à votre histoire; choisissez le genre, répondez aux questions et vous aurez un synopsis sur lequel bâtir votre histoire. Il offre aussi des outils de gestion des personnages, des lieux et des mémos que vous génèrerez assurément en cours d'écriture.</p>
 						<p><a href="http://prezi.com/dgath3ouob29/et-scribimus/" target="_blank">Présentation Prezi (lien externe, nécessite Adobe Flash)</a></p>
 
-						<h3>Quelles en sont les fonctionnalitées?</h3>
+						<h3>Quelles en sont les fonctionnalitées ?</h3>
 						<ul>
 							<li>Un assistant de création de synopsis basé sur les genres littéraires, pour vous inspirer;</li>
 							<li>Des fiches pour chacunes des questions : Qui, Quoi, Où, Pourquoi, Comment, Quand;</li>
@@ -50,22 +50,22 @@
 						</ul>
 
 						<h3>Tailles et limites</h3>
-						<h4>Y as-t'il une limite de nombre et/ou de taille de romans?</h4>
+						<h4>Y as-t'il une limite de nombre et/ou de taille de romans ?</h4>
 						<p>Non</p>
 
-						<h4>Y as-t'il une limite de nombre d'entitées?</h4>
+						<h4>Y as-t'il une limite de nombre d'entitées ?</h4>
 						<p>Pas pour le moment</p>
 
-						<h4>Le type doit-t'il impérativement être un roman?</h4>
+						<h4>Le type doit-t'il impérativement être un roman ?</h4>
 						<p>En fait non; pour pouvez aussi écrire d'autres type de document</p>
 
-						<h4>Sous quelle licence est-ce que mon oeuvre existe ou peut/doit être distribuée et/ou publiée?</h4>
+						<h4>Sous quelle licence est-ce que mon oeuvre existe ou peut/doit être distribuée et/ou publiée ?</h4>
 						<p>Sous celle que vous voulez. La présente application ne sert que d'assistant. La totalité du texte de l'oeuvre, des notes et des fiches vous appartiennent intégralement. Nous n'avons aucun lien, accord ou partenaria avec une compagnie de publication sous quelque forme que ce soit.</p>
 
-						<h4>L'application sera t'elle disponible dans d'autres langues?</h4>
+						<h4>L'application sera t'elle disponible dans d'autres langues ?</h4>
 						<p>Non, pas pour le moment.</p>
 
-						<h4>L'application est t'elle payante?</h4>
+						<h4>L'application est t'elle payante ?</h4>
 						<p>Pas pour le futur proche.</p>
 					</div>
 				</div>
